// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getPlayerPieces matches snapshot for new board, for black 1`] = `
[
  {
    "player": "BLACK",
    "position": {
      "file": "A",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "hasMoved": false,
    "player": "BLACK",
    "position": {
      "file": "A",
      "rank": 8,
    },
    "type": "R",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "B",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "B",
      "rank": 8,
    },
    "type": "N",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "C",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "C",
      "rank": 8,
    },
    "type": "B",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "D",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "D",
      "rank": 8,
    },
    "type": "Q",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "E",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "hasMoved": false,
    "player": "BLACK",
    "position": {
      "file": "E",
      "rank": 8,
    },
    "type": "K",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "F",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "F",
      "rank": 8,
    },
    "type": "B",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "G",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "G",
      "rank": 8,
    },
    "type": "N",
  },
  {
    "player": "BLACK",
    "position": {
      "file": "H",
      "rank": 7,
    },
    "type": "P",
  },
  {
    "hasMoved": false,
    "player": "BLACK",
    "position": {
      "file": "H",
      "rank": 8,
    },
    "type": "R",
  },
]
`;

exports[`getPlayerPieces matches snapshot for new board, for white 1`] = `
[
  {
    "hasMoved": false,
    "player": "WHITE",
    "position": {
      "file": "A",
      "rank": 1,
    },
    "type": "R",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "A",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "B",
      "rank": 1,
    },
    "type": "N",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "B",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "C",
      "rank": 1,
    },
    "type": "B",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "C",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "D",
      "rank": 1,
    },
    "type": "Q",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "D",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "hasMoved": false,
    "player": "WHITE",
    "position": {
      "file": "E",
      "rank": 1,
    },
    "type": "K",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "E",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "F",
      "rank": 1,
    },
    "type": "B",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "F",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "G",
      "rank": 1,
    },
    "type": "N",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "G",
      "rank": 2,
    },
    "type": "P",
  },
  {
    "hasMoved": false,
    "player": "WHITE",
    "position": {
      "file": "H",
      "rank": 1,
    },
    "type": "R",
  },
  {
    "player": "WHITE",
    "position": {
      "file": "H",
      "rank": 2,
    },
    "type": "P",
  },
]
`;
